--- a/.gitignore
+++ b/.gitignore
@@ -91,8 +91,12 @@ typings/
 # Electron-Forge
 out/
 
-# Python sidecar distribution
+# Python sidecar
 python-dist/
+python-build/
+python-src/.venv/
+python-src/__pycache__/
+*.pyc
 
 # Environment files
 .env*
