--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "Samsara",
   "version": "1.0.0",
   "description": "AI-powered resume editing with privacy-first local processing",
-  "main": ".vite/build/main.js",
+  "main": ".vite/build/index.js",
   "private": true,
   "scripts": {
     "start": "electron-forge start",
@@ -28,6 +28,7 @@
     "@electron-forge/plugin-vite": "^7.11.1",
     "@electron/fuses": "^1.8.0",
     "@electron/rebuild": "^4.0.2",
+    "@electron/windows-sign": "^2.0.2",
     "@types/better-sqlite3": "^7.6.13",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
