--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "lucide-react": "^0.563.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-highlight-words": "^0.21.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.10"
   }
