--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-dom": "^19.2.3",
     "react-highlight-words": "^0.21.0",
     "react-router-dom": "^7.13.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.10"
   }
