--- a/package.json
+++ b/package.json
@@ -77,18 +77,21 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.18",
+    "@types/nodemailer": "^7.0.9",
     "better-sqlite3": "^12.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "electron-squirrel-startup": "^1.0.1",
     "lucide-react": "^0.563.0",
     "motion": "^12.29.2",
+    "nodemailer": "^7.0.13",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-highlight-words": "^0.21.0",
     "react-router-dom": "^7.13.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "twilio": "^5.12.0",
     "zustand": "^5.0.10"
   }
 }
