--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "~4.5.4",
+    "typescript": "~5.6.0",
     "vite": "^5.4.21"
   },
   "dependencies": {
@@ -81,6 +81,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.18",
     "@types/nodemailer": "^7.0.9",
+    "@xstate/react": "^6.0.0",
     "better-sqlite3": "^12.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -95,6 +96,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "twilio": "^5.12.0",
+    "xstate": "^5.26.0",
     "zustand": "^5.0.10"
   }
 }
