--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "vite": "^5.4.21"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.72.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
